--- a/components/EventSearchPage/style/styles.module.css
+++ b/components/EventSearchPage/style/styles.module.css
@@ -1,41 +1,45 @@
 .event_search_page_container {
     display: flex;
 }
-.event_search{
+
+.event_search {
     margin: 40px 0;
     width: 95%;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
 
 }
-.search_container_input{
+
+.search_container_input {
     width: 320px;
     height: 45px;
     margin-right: 10px;
-
 }
-.event_drop_down{
+
+.event_drop_down {
     border: 1px solid #BBBBBC;
     width: 260px;
     height: 55px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 10px 15px;
     border-radius: 20px;
     flex-wrap: wrap;
     margin-right: 10px;
 
 
 }
-.event_drop_down_arrow{
+
+.event_drop_down_arrow {
     color: #BF6E98 !important;
-   font-size: 20px;
-   float: right;
+    font-size: 20px;
+    float: right;
 }
-.event_date_picker{
+
+.event_date_picker {
     width: 260px;
     height: 55px;
     border-radius: 20px;
@@ -93,28 +97,44 @@
 }
 
 .event_search_back_to_top {
-    margin-right: 30px;
-    font-family: AvenirNext;
-    color: #363636 !important
-}
-@media screen and (max-width: 1294px){
 
-    .event_date_picker{
-         margin-right: 0;
+    font-family: AvenirNext;
+    color: #363636 !important;
+    position: sticky;
+    position: -webkit-sticky;
+    bottom: 15px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 6px;
+    margin: 15px;
+}
+
+@media screen and (max-width: 1294px) {
+
+    .event_date_picker {
+        margin-right: 0;
         margin-top: 10px;
         width: 320px
     }
 }
-@media screen and (max-width: 905px){
-    .event_drop_down{
+
+@media screen and (max-width: 905px) {
+    .event_drop_down {
         margin-right: 0;
         margin-top: 10px;
         width: 320px
-    } 
+    }
+
+    .search_container_input {
+        margin-right: 0;
+        margin-bottom: 5px;
+    }
 }
 
-@media screen and (max-width: 820px){
-    .event_search_page_container{
+@media screen and (max-width: 820px) {
+
+    .event_search_page_container {
         display: flex;
         flex-direction: column;
     }
@@ -152,6 +172,19 @@
         width: 50%
     }
 
+    .event_search {
+        display: block;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .event_drop_down,
+    .event_date_picker,
+    .search_container_input {
+        width: 100%;
+    }
+
 }
 
 
@@ -159,6 +192,22 @@
 @media screen and (max-width: 620px) {
     .event_search_monthly_result_card {
         width: 100%
+    }
+
+    .search_container_input {
+        margin-right: 0;
+        margin-bottom: 5px;
+        width: 90%;
+    }
+
+    .event_search {
+        width: 100%;
+        display: flex;
+    }
+
+    .event_drop_down,
+    .event_date_picker {
+        width: 90%;
     }
 
 }
